eks-service.yaml
# service type loadbalancer       
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: packersmovers
    k8s-app: packersmovers
  name: packersmovers
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8081
#  type: NodePort
  selector:
    app: packersmovers
